--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                             <div class="delete"></div>
                         </li>
                     </ul>
-                </div>
+                </div>я
                 <div>
                     <form class="add">
                         <div class="promo__interactive-title">ДОБАВИТЬ НОВЫЙ ФИЛЬМ</div>
@@ -83,5 +83,6 @@
     </main>
 
     <script src="js/script.js"></script>
+    
 </body>
 </html>
