--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         </div>
         <div class="promo__content">
             <div class="promo__bg">
+                <h2>HEllo</h2>
                 <div class="promo__genre">КОМЕДИЯ</div>
                 <div class="promo__title">МАРСИАНИН</div>
                 <div class="promo__descr">ИСТОРИЯ ЧЕЛОВЕКА, ВЫЖИВШЕГО НА ЧУЖОЙ ПЛАНЕТЕ В ОДИНОЧКУ</div>
@@ -83,6 +84,6 @@
     </main>
 
     <script src="js/script.js"></script>
-    
+
 </body>
 </html>
