--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                             <div class="delete"></div>
                         </li>
                     </ul>
-                </div>я
+                </div>
                 <div>
                     <form class="add">
                         <div class="promo__interactive-title">ДОБАВИТЬ НОВЫЙ ФИЛЬМ</div>
